Fix button spacing.

--- a/_shared/styles/web-fundamentals.css
+++ b/_shared/styles/web-fundamentals.css
@@ -134,6 +134,9 @@ input[type=text] {
   padding: 0 .5em;
   border: 1px solid #979A9E;
 }
+.slide form p {
+  margin-bottom: 0;
+}
 
 /* Opinion symbols */
 .opinion:before {
